# pythonpractice

./: README.md  pyproject.toml
.github/workflows/: tests.yml
notebooks/: basics.ipynb  linear_regression.ipynb
pythonpractice/: apps.py  basics.ipynb  plotting.py
tests/: conftest.py  test_all.py  test_notebooks.py
