[tool.poetry]
name = "pythonpractice"
version = "0.1.0"
description = ""
authors = ["Aditya Gudimella <adgudime@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow = "^2.12.0"
ipykernel = "^6.22.0"
plotly = "^5.13.1"
dash = "^2.9.1"
jupyter-dash = "^0.4.2"
scikit-learn = "^1.2.2"
tqdm = "^4.65.0"
wandb = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
